--- a/statistics/juancolchete.html
+++ b/statistics/juancolchete.html
@@ -9,7 +9,7 @@
   <div id="chart-container"></div>
   <script src="https://echarts.apache.org/en/js/vendors/echarts/dist/echarts.min.js"></script>
   <script src="https://echarts.apache.org/en/js/vendors/echarts-gl/dist/echarts-gl.min.js"></script>
-  <script src="./juancolchete.js"></script>
-  <script src="./index.js"></script>
+  <script src="./.js"></script>
+  <script src="./.js"></script>
 </body>
 </html>
