--- a/juancolchete/statistics/juancolchete.html
+++ b/juancolchete/statistics/juancolchete.html
@@ -4,6 +4,17 @@
   <meta charset="utf-8">
   <title>juancolchete - Skyscraper</title>
   <link rel="stylesheet" href="./style.css">
+  <styles>
+    * {
+      margin: 0;
+      padding: 0;
+    }
+    #chart-container {
+      position: relative;
+      height: 100vh;
+      overflow: hidden;
+    }
+  </styles>
 </head>
 <body>
   <div id="chart-container"></div>
