--- a/juancolchete/statistics/juancolchete.html
+++ b/juancolchete/statistics/juancolchete.html
@@ -19,7 +19,7 @@
   <div id="chart-container"></div>
   <script src="https://echarts.apache.org/en/js/vendors/echarts/dist/echarts.min.js"></script>
   <script src="https://echarts.apache.org/en/js/vendors/echarts-gl/dist/echarts-gl.min.js"></script>
-  <script src="juancolchete/statistics/juancolcheteData.js"></script>
-  <script src="juancolchete/statistics/juancolcheteSkyscraper.js"></script>
+  <script src="./juancolcheteData.js"></script>
+  <script src="./juancolcheteSkyscraper.js"></script>
 </body>
 </html>
