--- a/juancolchete/statistics/juancolcheteYearDominanceStandalone.html
+++ b/juancolchete/statistics/juancolcheteYearDominanceStandalone.html
@@ -42,7 +42,44 @@
       itemStyle: {
         borderRadius: 8
       },
-    data: 
+    data: [
+  {
+    "name": "2018",
+    "value": "1"
+  },
+  {
+    "name": "2019",
+    "value": "145"
+  },
+  {
+    "name": "2020",
+    "value": "88"
+  },
+  {
+    "name": "2021",
+    "value": "1117"
+  },
+  {
+    "name": "2022",
+    "value": "4530"
+  },
+  {
+    "name": "2023",
+    "value": "4629"
+  },
+  {
+    "name": "2024",
+    "value": "4380"
+  },
+  {
+    "name": "2025",
+    "value": "2782"
+  },
+  {
+    "name": "2026",
+    "value": "701"
+  }
+]
     }
   ]
 };
